force-app/main/default/objects/My_Transactions__c/My_Transactions__c.object-meta.xml
<CustomObject>
    <label>My Transactions</label>
    <nameField>
        <displayFormat>Transaction no-{0}</displayFormat>
        <label>Transaction</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>My Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>