force-app/main/default/objects/My_Transactions__c/fields/My_Accountss__c.field-meta.xml
<CustomField>
    <fullName>My_Accountss__c</fullName>
    <label>My Accountss</label>
    <referenceTo>My_Accounts__c</referenceTo>
    <relationshipLabel>My Transactions</relationshipLabel>
    <relationshipName>My_Transactions1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>