force-app/main/default/objects/My_Transactions__c/fields/Reciever_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Reciever_Account_Number__c</fullName>
    <label>Reciever Account Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>