force-app/main/default/objects/My_Transactions__c/fields/Reciever_IFSC__c.field-meta.xml
<CustomField>
    <fullName>Reciever_IFSC__c</fullName>
    <label>Reciever IFSC</label>
    <length>18</length>
    <type>Text</type>
</CustomField>