force-app/main/default/objects/My_Transactions__c/fields/Reciever_Name__c.field-meta.xml
<CustomField>
    <fullName>Reciever_Name__c</fullName>
    <label>Reciever Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>