force-app/main/default/objects/My_Transactions__c/fields/Transaction_date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_date__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction date</label>
    <type>Date</type>
</CustomField>