force-app/main/default/objects/My_Transactions__c/recordTypes/Peer_to_Peer_Transactions.recordType-meta.xml
<RecordType>
    <fullName>Peer_to_Peer_Transactions</fullName>
    <active>true</active>
    <label>Peer to Peer Transactions</label>
</RecordType>