force-app/main/default/objects/My_Transactions__c/recordTypes/Withdrawal_Deposit.recordType-meta.xml
<RecordType>
    <fullName>Withdrawal_Deposit</fullName>
    <active>true</active>
    <label>Withdrawal/Deposit</label>
</RecordType>