force-app/main/default/objects/My_Transactions__c/validationRules/amount.validationRule-meta.xml
<ValidationRule>
    <fullName>amount</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISPICKVAL(Transaction_Type__c, &apos;Withdrawal&apos;), 
  (OR( 
    ISNULL( Amount__c ),
    Amount__c &lt;= 0,
     Amount__c &gt; My_Accountss__r.Balance__c 

)), false)</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Withdrawal Amount Can&apos;t be null or Grater than the yours&apos;  Account balance</errorMessage>
</ValidationRule>