force-app/main/default/objects/My_Transactions__c/validationRules/Amount_negative_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_negative_check</fullName>
    <active>true</active>
    <errorConditionFormula>Amount__c&lt;=0</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Transaction Amount  Can not be Zero or  Negative</errorMessage>
</ValidationRule>