force-app/main/default/objects/My_Transactions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>Transaction_Status__c</columns>
    <columns>Transaction_date__c</columns>
    <columns>My_Accountss__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>